* #725: Update FCKeditor to version 2.6.4.1 (skenow)
* Update protector to version 3.36a beta (stranger)
* Update phpopenid library to 2.1.3
* Update TinyMCE to version 3.2.6 (stranger)
* Update simplepie to version 1.2 (stranger)
* Update PHPMailer to version 5.0.2 (stranger)
* Update tcpdf to version 4.7.003 (stranger)

'''Fixed'''
* #754: removed deprecated html purifier leftovers that are no longer used with new system. (vaughan/phoenyx)
* #661: Uploader setPrefix may incorrectly assign filenames. (vaughan)
* #763: Unable to login with email address, function getLoginFromUserEmail created to retrieve login name from email. (vaughan)
* fixed class/icmsform/icmsform.php 723-728 lines (????) (mekdrop)
* #764: The user leave the installer with the footer link (sato-san)
* #759: icmsform fixed (sato-san)
* #334: Videolayer is over the jQuery pictures (sato-san)
* #249: Path to ICMS_IMAGES_SET_URL corrected (sato-san)
* #657: Icons for adsense, rating and mime-types (sato-san)
* #728: Link to delete a block correced (sato-san)
* #731: Recommends changed > modules/ added. (sato-san)
* #726: All words with language variables created from modules/system/admin/users/main.php  (sato-san)
* #548: Errors with class/theme.php (TheRplima)
* #636: search in the frontend works not (TheRplima)
* #587: banners.php with fatal error (TheRplima)
* #603: Filter for custom blocks in blocksadmin (TheRplima)
* #640: Version checker blank page when version file is not available (skenow)
* #653: wrong url to edit a block in group manager (Phoenyx)
* #242: email address isn't marked as required in the user form | ticket from addons (Phoenyx)
* #167: Location shows a Google Maps locator image even if no location is provided | ticket from addons (Phoenyx)
* #241: Fatal error: Class 'ProfileControlerTribes' not found when creating a comment on a tribe | ticket from addons (Phoenyx)
* #244: login_name in edituser.php is always 'login_name' | ticket from addons (Phoenyx)