@@ -56,7 +56,7 @@ if ( $_SERVER['REQUEST_METHOD'] == 'POST' ) {
 		if (isset($_POST['install_mods'])){
 			for ($i = 0; $i <= count($install_mods)-1;$i++){
 				$content .= xoops_module_install($install_mods[$i]);
-				$content .= icms_module_update($install_mods[$i]);
+				//$content .= icms_module_update($install_mods[$i]);
 				xoops_module_get_admin_menu();
 	        }
 		} else {
