@@ -10,7 +10,7 @@ if (!defined("XOOPS_ROOT_PATH")) {
 }
 
 define("_DATABASEUPDATER_IMPORT", "Import");
-define("_DATABASEUPDATER_CURRENTVER", "Current version: <span class='currentVer'>%s</span><br />");
+define("_DATABASEUPDATER_CURRENTVER", "Current version: <span class='currentVer'>%s</span>");
 define("_DATABASEUPDATER_DBVER", "Database Version %s");
 define("_DATABASEUPDATER_MSG_ADD_DATA", "Data added in table %s");
 define("_DATABASEUPDATER_MSG_ADD_DATA_ERR", "Error adding data in table %s");
@@ -20,7 +20,7 @@ define("_DATABASEUPDATER_MSG_CREATE_TABLE", "Table %s created");
 define("_DATABASEUPDATER_MSG_CREATE_TABLE_ERR", "Error creating table %s");
 define("_DATABASEUPDATER_MSG_NEWFIELD", "Successfully added field %s");
 define("_DATABASEUPDATER_MSG_NEWFIELD_ERR", "Error adding field %s");
-define("_DATABASEUPDATER_NEEDUPDATE", "Your database is out-of-date. Please upgrade your database tables!<br /><b>Note : The ImpressCMS strongly recommends you to backup all your database tables before running this upgrade script.</b><br />");
+define("_DATABASEUPDATER_NEEDUPDATE", "Your database is out-of-date. Please upgrade your database tables!<br /><b>Note : The ImpressCMS strongly recommends you to backup all your database tables before running this upgrade script.</b>");
 define("_DATABASEUPDATER_NOUPDATE", "Your database is up-to-date. No updates are necessary.");
 define("_DATABASEUPDATER_UPDATE_DB", "Updating Database");
 define("_DATABASEUPDATER_UPDATE_ERR", "Errors updating to version %s");
@@ -34,7 +34,7 @@ define("_DATABASEUPDATER_MSG_UPDATE_TABLE_ERR", "An error occured while updating
 define("_DATABASEUPDATER_MSG_DELETE_TABLE", "Specified records of table %s were successfully deleted");
 define("_DATABASEUPDATER_MSG_DELETE_TABLE_ERR", "An error occured while deleting specified records in table %s");
 define("_DATABASEUPDATER_MSG_DB_VERSION_ERR", "Unable to update module dbversion");
-define("_DATABASEUPDATER_LATESTVER", "Latest database version : <span class='currentVer'>%s</span><br />");
-define("_DATABASEUPDATER_MSG_CONFIG_ERR", "Unable to insert config %s<br />");
-define("_DATABASEUPDATER_MSG_CONFIG_SCC", "Successfully inserted %s config<br />");
+define("_DATABASEUPDATER_LATESTVER", "Latest database version : <span class='currentVer'>%s</span>");
+define("_DATABASEUPDATER_MSG_CONFIG_ERR", "Unable to insert config %s");
+define("_DATABASEUPDATER_MSG_CONFIG_SCC", "Successfully inserted %s config");
 ?>
