@@ -18,25 +18,4 @@ include_once '../../../include/cp_header.php';
 include_once ICMS_ROOT_PATH.'/modules/' . basename(dirname(dirname(__FILE__))) .'/include/common.php';
 if( !defined("CONTENT_ADMIN_URL") ) define('CONTENT_ADMIN_URL', CONTENT_URL . "admin/");
 include_once(CONTENT_ROOT_PATH . 'include/requirements.php');
-
-/**
-* First use page of the module
-*
-* The module uses the IcmsPersistable Framework and because of this, no sql/mysql.sq file is
-* necessary to create the database tables of the module. Those tables will be dynamically created
-* when updating the module, based on the class that are defined for the module. Since the creation
-* of those tables are done when the module is updated, we need to force the wemaster to update the
-* module when he first enters the admin side of the module.
-*/
-if (is_object($xoopsModule) && $xoopsModule->dirname() == CONTENT_DIRNAME) {
-	// We are in the module
-	if (defined('XOOPS_CPFUNC_LOADED')) {
-		// We are in the admin side of the module
-		if (!$xoopsModule->getDBVersion()) {
-			redirect_header(ICMS_URL . '/modules/system/admin.php?fct=modulesadmin&op=update&module=' . CONTENT_DIRNAME, 4, _AM_CONTENT_FIRST_USE);
-			exit;
-		}
-	}
-}
-
 ?>
