@@ -36,13 +36,6 @@ function content_db_upgrade_2() {
 }*/
 
 function icms_module_update_content($module) {
-	/**
-	 * Using the IcmsDatabaseUpdater to automaticallly manage the database upgrade dynamically
-	 * according to the class defined in the module
-	 */
-	$icmsDatabaseUpdater = XoopsDatabaseFactory::getDatabaseUpdater ();
-	$icmsDatabaseUpdater->moduleUpgrade ( $module );
-	
 	$table = new IcmsDatabasetable ( 'icmscontent' );
 	$db = $GLOBALS ['xoopsDB'];
 	
