@@ -1,21 +1,0 @@
-<?php
-/**
- * Extended User Profile
- *
- *
- * @copyright	   The ImpressCMS Project http://www.impresscms.org/
- * @license		 LICENSE.txt
- * @license			GNU General Public License (GPL) http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
- * @package		 modules
- * @since		   1.2
- * @author		  Jan Pedersen
- * @author		  The SmartFactory <www.smartfactory.ca>
- * @author	   		Sina Asghari (aka stranger) <pesian_stranger@users.sourceforge.net>
- * @version		 $Id$
- */
-
-function icms_module_install_profile($module) {
-	return true;
-}
-
-?>
